--- a/index.html
+++ b/index.html
@@ -3,46 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>goit-markup-hw-01(Данил Прохорчук)</title>
+    <title>goit-markup-hw-02(Данил Прохорчук)</title>
+    <link rel="stylesheet" href=" https://cdnjs.com/libraries/modern-normalize">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="/goit-markup-hw-01/index.html">WebStudio</a>
+            <a href="./index.html"><span class="logo-web">Web</span><span class="logo-studio-header">Studio</span></a>
             <ul>
-                <li><a href="#">Студия</a></li>
-                <li><a href="#">Портфолио</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="./index.html" class="link-active">Студия</a></li>
+                <li><a href="./portfolio.html" class="nav-item">Портфолио</a></li>
+                <li><a href="#" class="nav-item">Контакты</a></li>
             </ul>
         </nav>
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="link-active">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="header-address">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
-        <section>
+        <section class="hero-section">
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <button>Заказать услугу</button>
+            <button class="button-active">Заказать услугу</button>
         </section>
         <section>
-            <h2>Скрытый текст</h2>
+            <h2 class="ghost-text">Наши преимущества</h2>
             <ul>
                 <li>
                 <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <p class="advantages-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
                 <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <p class="advantages-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
                 <h3>Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <p class="advantages-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
                 <h3>Современные технологии</h3>    
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>        
+                <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>        
                 </li>
             </ul>
         </section>
@@ -51,17 +54,17 @@
             <ul>
                 <li>
                     <a href="#">
-                        <img src="/goit-markup-hw-01/images/box1.jpg" alt="Работа на ПК" height="294" width="370">
+                        <img src="./img/box1.jpg" alt="Работа на ПК" height="294" width="370">
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="/goit-markup-hw-01/images/box2.jpg" alt="Работа на телефоне" height="294" width="370">
+                        <img src="./img/box2.jpg" alt="Работа на телефоне" height="294" width="370">
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="/goit-markup-hw-01/images/box3.jpg" alt="Работа на планшете" height="294" width="370">
+                        <img src="./img/box3.jpg" alt="Работа на планшете" height="294" width="370">
                     </a>
                 </li>
             </ul>
@@ -71,46 +74,46 @@
             <ul>
                 <li>
                     <a href="#">
-                        <img src="/goit-markup-hw-01/images/img.jpg" alt="Анфас Игоря Демьяненко" height="260" width="270">
+                        <img src="./img/img.jpg" alt="Анфас Игоря Демьяненко" height="260" width="270">
+                        <h3 class="comand-name">Игорь Демьяненко</h3>
+                        <p class="profession">Product Designer</p>
                     </a>
-                    <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="/goit-markup-hw-01/images/img(1).jpg" alt="Анфас Ольги Репиной" height="260" width="270">
+                        <img src="./img/img(1).jpg" alt="Анфас Ольги Репиной" height="260" width="270">
+                        <h3 class="comand-name">Ольга Репина</h3>
+                        <p class="profession">Frontend Developer</p>
                     </a>
-                    <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="/goit-markup-hw-01/images/img(2).jpg" alt="Анфас Николая Тарасова" height="260" width="270">
+                        <img src="./img/img(2).jpg" alt="Анфас Николая Тарасова" height="260" width="270">
+                        <h3 class="comand-name">Николай Тарасов</h3>
+                        <p class="profession">Marketing</p>
                     </a>
-                    <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="/goit-markup-hw-01/images/img(3).jpg" alt="Анфас Михаила Ермакова" height="260" width="270">
+                        <img src="./img/img(3).jpg" alt="Анфас Михаила Ермакова" height="260" width="270">
+                        <h3 class="comand-name">Михаил Ермаков</h3>
+                        <p class="profession">UI Designer</p>
                     </a>
-                    <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="/goit-markup-hw-01/index.html">WebStudio</a>
+    <footer class="footer-section">
+        <a href="./index.html"><span class="logo-web">Web</span><span class="logo-studio-footer">Studio</span></a>
         <ul>
             <li>
-                <address>г. Киев, пр-т Леси Украинки, 26</address>
+                <address class="footer-address">г. Киев, пр-т Леси Украинки, 26</address>
             </li>
             <li>
-                <a href="mailto:info@example.com">info@example.com</a>
+                <a href="mailto:info@example.com" class="footer-link">info@example.com</a>
             </li>
             <li>
-                <a href="tel:+380991111111">+38 099 111 11 11</a>
+                <a href="tel:+380991111111" class="footer-link">+38 099 111 11 11</a>
             </li>
         </ul>
     </footer>
