--- a/portfolio.html
+++ b/portfolio.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>goit-markup-hw-02(Данил Прохорчук)</title>
-    <link rel="stylesheet" href=" https://cdnjs.com/libraries/modern-normalize">
+    <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 <header>
     <nav>
-        <a href="./index.html"><span class="logo-web">Web</span><span class="logo-studio-header">Studio</span></a>
+        <a href="./index.html"><span class="logo-web">Web</span><span class="studio-header">Studio</span></a>
         <ul>
             <li><a href="./index.html" class="nav-item">Студия</a></li>
-            <li><a href="./portfolio.html" class="link-active">Портфолио</a></li>
+            <li><a href="./portfolio.html" class="page-active">Портфолио</a></li>
             <li><a href="#" class="nav-item">Контакты</a></li>
         </ul>
     </nav>
@@ -23,13 +24,13 @@
 </header>
 <main>
     <section>
-        <h1 class="ghost-text">наши работы</h1>
+        <h1 class="ghost-text">Наши работы</h1>
         <ul>
-            <li><a href="#" class="button-active">Все</a></li>
-            <li><a href="#" class="button">Веб-сайты</a></li>
-            <li><a href="#" class="button">Приложения</a></li>
-            <li><a href="#" class="button">Дизайн</a></li>
-            <li><a href="#" class="button">Маркетинг</a></li>
+            <li><button class="button">Все</button></li>
+            <li><button class="button">Веб-сайты</button></li>
+            <li><button class="button">Приложения</button></li>
+            <li><button class="button">Дизайн</button></li>
+            <li><button class="button">Маркетинг</button></li>
         </ul>
         <ul>
             <li>
@@ -99,7 +100,7 @@
     </section>
 </main>
 <footer class="footer-section">
-    <a href="./index.html"><span class="logo-web">Web</span><span class="logo-studio-footer">Studio</span></a>
+    <a href="./index.html"><span class="logo-web">Web</span><span class="studio-footer">Studio</span></a>
     <ul>
         <li>
             <address class="footer-address">г. Киев, пр-т Леси Украинки, 26</address>
