--- a/index.html
+++ b/index.html
@@ -4,53 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>goit-markup-hw-02(Данил Прохорчук)</title>
-    <link rel="stylesheet" href=" https://cdnjs.com/libraries/modern-normalize">
+    <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="./index.html"><span class="logo-web">Web</span><span class="logo-studio-header">Studio</span></a>
+            <a href="./index.html"><span class="logo-web">Web</span><span class="studio-header">Studio</span></a>
             <ul>
-                <li><a href="./index.html" class="link-active">Студия</a></li>
+                <li><a href="./index.html" class="page-active">Студия</a></li>
                 <li><a href="./portfolio.html" class="nav-item">Портфолио</a></li>
                 <li><a href="#" class="nav-item">Контакты</a></li>
             </ul>
         </nav>
         <ul>
-            <li><a href="mailto:info@devstudio.com" class="link-active">info@devstudio.com</a></li>
+            <li><a href="mailto:info@devstudio.com" class="header-address">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" class="header-address">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
         <section class="hero-section">
-            <h1>Эффективные решения для вашего бизнеса</h1>
+            <h1 class="hero-phrase">Эффективные решения для вашего бизнеса</h1>
             <button class="button-active">Заказать услугу</button>
         </section>
         <section>
             <h2 class="ghost-text">Наши преимущества</h2>
             <ul>
                 <li>
-                <h3>Внимание к деталям</h3>
+                <h3 class="little-phrase">Внимание к деталям</h3>
                 <p class="advantages-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                <h3>Пунктуальность</h3>
+                <h3 class="little-phrase">Пунктуальность</h3>
                 <p class="advantages-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                <h3>Планирование</h3>
+                <h3 class="little-phrase">Планирование</h3>
                 <p class="advantages-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                <h3>Современные технологии</h3>    
+                <h3 class="little-phrase">Современные технологии</h3>    
                 <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>        
                 </li>
             </ul>
         </section>
         <section>
-            <h2>Чем мы занимаемся</h2>
+            <h2 class="head-phrase">Чем мы занимаемся</h2>
             <ul>
                 <li>
                     <a href="#">
@@ -70,7 +71,7 @@
             </ul>
         </section>
         <section>
-            <h2>Наша команда</h2>
+            <h2 class="head-phrase">Наша команда</h2>
             <ul>
                 <li>
                     <a href="#">
@@ -104,7 +105,7 @@
         </section>
     </main>
     <footer class="footer-section">
-        <a href="./index.html"><span class="logo-web">Web</span><span class="logo-studio-footer">Studio</span></a>
+        <a href="./index.html"><span class="logo-web">Web</span><span class="studio-footer">Studio</span></a>
         <ul>
             <li>
                 <address class="footer-address">г. Киев, пр-т Леси Украинки, 26</address>
